#91 chore: Make population name non-unique
