# infrastructure/common-images/workspaces-base/backend/api/services/experiment_service.py
@@ -1,3 +1,5 @@
+import os.path
+
 from api.helpers.exceptions import InvalidInputError
 from api.models import Experiment, Population, Tag
 from api.services.workflows_service import execute_generate_population_cells_workflow
@@ -24,8 +26,20 @@ def delete_tag(experiment: Experiment, tag_name: str):
     return True
 
 
-def upload_files(experiment: Experiment, population_name: str, data_filepath):
-    population, created = Population.objects.get_or_create(
-        experiment_id=experiment.id, name=population_name)
+def upload_files(experiment: Experiment, data_filepath: str, population_id: int):
+    try:
+        population_name = os.path.basename(data_filepath.split('_Data')[0])
+    except Exception:
+        raise InvalidInputError
+
+    created = False
+    if population_id:
+        try:
+            population = Population.objects.get(experiment_id=experiment.id, id=population_id)
+        except Population.DoesNotExist:
+            raise InvalidInputError
+    else:
+        population = Population.objects.create(experiment_id=experiment.id, name=population_name)
+        created = True
     execute_generate_population_cells_workflow(population.id, data_filepath)
     return created
